--- a/webflow_head.html
+++ b/webflow_head.html
@@ -22,6 +22,15 @@
 	scrollbar-gutter: stable;
 }
 
+#preloader p{
+	animation: blink 1s cubic-bezier(0.45, 0, 0.55, 1) infinite alternate;
+}
+
+@keyframes blink{
+	0%{opacity: 0;}
+	100%{opacity: 1;}
+}
+
 .bg-img {
 	pointer-events:none; 
 }
