--- a/webflow_head.html
+++ b/webflow_head.html
@@ -26,6 +26,10 @@
 	animation: blink 1s cubic-bezier(0.45, 0, 0.55, 1) infinite alternate;
 }
 
+#preloader .hero-text-wrapper svg{
+	position: absolute;
+}
+
 @keyframes blink{
 	0%{opacity: 0;}
 	100%{opacity: 1;}
