smooth scroll no stretch

--- a/webflow_head.html
+++ b/webflow_head.html
@@ -23,7 +23,8 @@
 }
 
 #preloader p{
-	animation: blink 1s cubic-bezier(0.45, 0, 0.55, 1) infinite alternate;
+	opacity: 0;
+	/* animation: blink 1s cubic-bezier(0.45, 0, 0.55, 1) infinite alternate; */
 }
 
 #preloader .hero-text-wrapper svg{
