--- a/webflow_head.html
+++ b/webflow_head.html
@@ -14,6 +14,15 @@
 </script>
 
 <style>
+
+	.casestudy-content {
+		pointer-events: none;
+	}
+
+	.casestudy-content > div {
+		pointer-events: all;
+	}
+	
 	.mail-tag > .text-regular:not(:first-child) {
 		top: 0;
 		position: absolute;
