--- a/webflow_head.html
+++ b/webflow_head.html
@@ -30,7 +30,12 @@
 
 	#preloader {
 		display: flex;
+	}
+
+	@media screen and (min-width: 568px) {
+		#preloader {
 		scrollbar-gutter: stable;
+		}
 	}
 
 	#preloader p {
