--- a/webflow_head.html
+++ b/webflow_head.html
@@ -81,6 +81,12 @@
 		overflow: hidden;
 	}
 
+	.filters-active{
+		border-color: #ff9a47;
+    	background-color: #ff9a47;
+    	color: #040707;
+	}
+
 	::-webkit-scrollbar {
 		width: 0.5vw;
 		/* Controls the overall width of the scrollbar */
