--- a/webflow_head.html
+++ b/webflow_head.html
@@ -44,7 +44,7 @@
 
 	#preloader p {
 		opacity: 0;
-		/* animation: blink 1s cubic-bezier(0.45, 0, 0.55, 1) infinite alternate; */
+		animation: blink 1s cubic-bezier(0.45, 0, 0.55, 1) infinite alternate;
 	}
 
 	#preloader .hero-text-wrapper svg {
