--- a/webflow_head.html
+++ b/webflow_head.html
@@ -36,6 +36,10 @@
 		display: flex;
 	}
 
+	.w-editor #preloader{
+		display: none;
+	}
+
 	@media screen and (min-width: 568px) {
 		#preloader {
 		scrollbar-gutter: stable;
