bg-img right size mobile

--- a/webflow_head.html
+++ b/webflow_head.html
@@ -15,6 +15,12 @@
 
 <style>
 
+	.bg-img.full-height{
+		width: auto;
+		height: 100%;
+		aspect-ratio: 16/9;
+	}
+
 	.casestudy-content {
 		pointer-events: none;
 	}
