--- a/webflow_head.html
+++ b/webflow_head.html
@@ -6,7 +6,7 @@
 	if (typeof parceled === 'undefined') {
 		let script = document.createElement('script')
 		script.type = 'text/javascript'
-		script.src = 'https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=25';
+		script.src = 'https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=26';
 		document.head.appendChild(script)
 	}
 	//checks if the parceled variable from app.js is undefined- meaning local host isn't up and running
@@ -17,7 +17,7 @@
 
 	.bg-img.full-height{
 		width: auto;
-		height: 100%;
+		height: 100vh;
 		aspect-ratio: 16/9;
 	}
 
