--- a/webflow_head.html
+++ b/webflow_head.html
@@ -1,17 +1,17 @@
-<script src="http://localhost:1234/app.js"></script>
+<!-- <script src="http://localhost:1234/app.js"></script> -->
 <!-- tries to load from local host -->
-<!-- <script src="https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js"></script> -->
+<script src="https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=27"></script>
 
-<script>
+<!-- <script>
 	if (typeof parceled === 'undefined') {
 		let script = document.createElement('script')
 		script.type = 'text/javascript'
-		script.src = 'https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=26';
+		script.src = 'https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=27';
 		document.head.appendChild(script)
 	}
 	//checks if the parceled variable from app.js is undefined- meaning local host isn't up and running
 	//if not loads from the github pages
-</script>
+</script> -->
 
 <style>
 
@@ -19,6 +19,10 @@
 		width: auto;
 		height: 100vh;
 		aspect-ratio: 16/9;
+	}
+
+	.cs-img-wrap:last-child:nth-child(odd){
+	width: 100%;
 	}
 
 	.casestudy-content {
