--- a/webflow_head.html
+++ b/webflow_head.html
@@ -1,8 +1,8 @@
-<script src="http://localhost:1234/app.js"></script>
+<!-- <script src="http://localhost:1234/app.js"></script> -->
 <!-- tries to load from local host -->
-<!-- <script src="https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=27"></script> -->
+<script src="https://psychoactive-studios.github.io/beyond-studio-scoping/dist/app.js?v=28"></script>
 
-<script>
+<!-- <script>
 	if (typeof parceled === 'undefined') {
 		let script = document.createElement('script')
 		script.type = 'text/javascript'
@@ -11,7 +11,7 @@
 	}
 	//checks if the parceled variable from app.js is undefined- meaning local host isn't up and running
 	//if not loads from the github pages
-</script>
+</script> -->
 
 <style>
 
@@ -92,7 +92,7 @@
 </style>
 
 <style>
-	body {
+	html, body {
 		direction: ltr;
 		overscroll-behavior: none;
 		overflow: hidden;
