fix origin and timeline reset

--- a/webflow_head.html
+++ b/webflow_head.html
@@ -98,6 +98,10 @@
 		overflow: hidden;
 	}
 
+	/* iframe button{
+		pointer-events: all;
+	} */
+
 	.filters-active{
 		border-color: #ff9a47;
     	background-color: #ff9a47;
